test/asm/macro-syntax.simple.err
error: macro-syntax.asm(7):
    syntax error
error: macro-syntax.asm(8):
    Macro argument '\1' not defined
error: macro-syntax.asm(9):
    syntax error
error: Assembly aborted (3 errors)!
